# qamqp

./: CMakeLists.txt
src/: qamqpqueue.cpp  qamqpqueue.h
